<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.thenerdcj</groupId>
    <artifactId>FoliaSkyblock</artifactId>
    <version>1.0.2</version>
    <packaging>jar</packaging>

    <name>FoliaSkyblock</name>
    <description>High-performance Skyblock plugin for Folia 1.21+</description>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <paper.api.version>1.21.4-R0.1-SNAPSHOT</paper.api.version>
        <hikaricp.version>5.1.0</hikaricp.version>
    </properties>

    <repositories>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <!-- Required for MockBukkit -->
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <!-- No WorldEdit/EngineHub repo needed (schematic support completely removed) -->
    </repositories>

    <dependencies>
        <!-- Paper API -->
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>${paper.api.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- HikariCP Connection Pool -->
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>5.1.0</version>
        </dependency>

        <!-- SQLite (production + integration tests; matches jdbc:sqlite in DatabaseManager) -->
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.46.1.3</version>
        </dependency>

        <!-- Gson removed for zero-dep (per-donation DB rows table used instead for museum persist count/rarity; addresses provided scope runtime issues on non-standard servers) -->

        <!-- ==================== TEST DEPENDENCIES ==================== -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.11.0</version>
            <scope>test</scope>
        </dependency>

        <!-- H2 in-memory database for realistic DatabaseManager testing -->
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>2.2.224</version>
            <scope>test</scope>
        </dependency>

        <!-- In-memory SQLite for integration tests (matches production INSERT OR REPLACE dialect) -->
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.45.3.0</version>
            <scope>test</scope>
        </dependency>

        <!-- No WorldEdit dependency (schematic support and auto-download completely removed from project) -->

        <!-- MockBukkit is available via the "with-mockbukkit" profile (see <profiles>) for realistic cycle tests. -->

    </dependencies>

    <build>
        <defaultGoal>clean package</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <release>${java.version}</release>
                </configuration>
            </plugin>

            <!-- JUnit 5 test runner (includes DatabaseCriticalFlowsTest on default mvn test) -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <includes>
                        <include>**/*Test.java</include>
                        <include>**/*Tests.java</include>
                    </includes>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.2</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <finalName>FoliaSkyblock</finalName>
                            <minimizeJar>true</minimizeJar>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>com.thenerdcj.FoliaSkyblock</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <!--
      Profile for enabling MockBukkit (realistic AutoSeller / wardrobe / GUI cycle tests).
      Usage:  mvn test -Pwith-mockbukkit

      The test infrastructure (TestBase + MockBukkitGuiSimulator) has been made significantly
      more robust against the common Paper 1.21 + MockBukkit registry skew:
      - Safe creation helpers + automatic degradation
      - Simulator never auto-starts MB (only dedicated integration tests opt-in via addPlayer)
      - Lenient stubbing + avoidance of heavy enum statics in normal test paths

      Most of the suite stays green regardless of exact MB/Paper pair. The aggressive
      MB-dependent tests remain gated or gracefully degrade when the environment is hostile.
    -->
    <profiles>
        <profile>
            <id>integration-db</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <includes>
                                <include>**/DatabaseCriticalFlowsTest.java</include>
                            </includes>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>with-mockbukkit</id>
            <dependencies>
                <dependency>
                    <groupId>com.github.seeseemelk</groupId>
                    <artifactId>MockBukkit-v1.21</artifactId>
                    <version>3.133.2</version>
                    <scope>test</scope>
                </dependency>
            </dependencies>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <includes>
                                <include>**/*Test.java</include>
                                <include>**/*Tests.java</include>
                            </includes>
                            <systemPropertyVariables>
                                <folia.mockbukkit.enabled>true</folia.mockbukkit.enabled>
                            </systemPropertyVariables>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>